# tud_psaf_tokyodrift

./: .gitignore  README.md
src/0_common/button_launch/: CMakeLists.txt  README.md  package.xml
src/0_common/button_launch/config/: inner_drive_config.yaml  obstacle_detection_config.yaml  outer_drive_config.yaml
src/0_common/button_launch/include/: button_launch_config.hpp  button_launch_node.h
src/0_common/button_launch/src/: button_launch_node.cpp
src/0_common/helpers/: CMakeLists.txt  README.md  package.xml
src/0_common/helpers/include/: cubic_bezier.hpp  display_check.hpp  filter.hpp  integrator.hpp  kalman_estimator.hpp  point_msg_helper.hpp
src/0_common/helpers/test/: filter_test.cpp  integrator_test.cpp  point_msg_helper_test.cpp
src/0_common/psaf_ucbridge/: CMakeLists.txt  CPPLINT.cfg  package.xml
src/0_common/psaf_ucbridge/src/: uc_bridge.cpp  uc_node.cpp  utils.cpp
src/0_common/psaf_ucbridge/test/: channel_test.cpp  command_test.cpp  config_test.cpp  logger_test.cpp  message_queue_test.cpp  request_test.cpp  sensor_group_test.cpp  service_functions_test.cpp  uc_board_mock.cpp  uc_bridge_thread_test.cpp  utils_test.cpp
src/0_common/psaf_ucbridge_msgs/: CMakeLists.txt  package.xml
src/0_common/psaf_ucbridge_msgs/msg/: Daq.msg  EncCm.msg  EncStep.msg  Led.msg  Pbs.msg  RawMessage.msg  UnkDaq.msg  Vbat.msg
src/0_common/psaf_ucbridge_msgs/srv/: ReqChs.srv  ReqDms.srv  ReqDrv.srv  ReqEnc.srv  ReqGet.srv  ReqGrp.srv  ReqId.srv  ReqImu.srv  ReqMag.srv  ReqRaw.srv  ReqSid.srv  ReqSteer.srv  ReqUs.srv  ReqVer.srv  ReqVout.srv
src/0_common/utility/: CMakeLists.txt  package.xml
src/0_common/utility/launch/: button.launch.py  button_tokyodrift.launch.py  tokyodrift.launch.py
src/0_common/utility/msg/: Control.msg  FilteredHall.msg  FilteredIMU.msg  FusedSensor.msg  ObstacleDetection.msg  Startbox.msg  Trajectory.msg  VehicleState.msg
src/1_sense/depth_obstacle_detection/: CMakeLists.txt  README.md  package.xml
src/1_sense/depth_obstacle_detection/config/: default_config.yaml
src/1_sense/depth_obstacle_detection/include/: depth_obstacle_detection_config.h  depth_obstacle_detection_node.h
src/1_sense/depth_obstacle_detection/src/: depth_obstacle_detection_node.cpp
src/1_sense/lane_detection/: CMakeLists.txt  README.md  package.xml
src/1_sense/lane_detection/config/: camcalout.yaml  camcalout_more_pixel.yaml  camcalout_old.yaml  camcalout_old_19_02.yaml  default_config.yaml  image_publisher_config.yaml  purepursuit_config.yaml  ros_debug_config.yaml
src/1_sense/lane_detection/include/: image_publisher_test.h  interpolation.h  lane_detection.h  lane_detection_config.h  lane_detection_helper.hpp  lane_detection_node.h
src/1_sense/lane_detection/launch/: lane_detection.launch.py
src/1_sense/lane_detection/src/: image_publisher_test.cpp  lane_detection.cpp  lane_detection_config.cpp  lane_detection_node.cpp
src/1_sense/lane_detection/test/: lane_detection_test.cpp  main_for_debug.cpp  optimize_adaptive_th_time.py
src/1_sense/obstacle_detection/: CMakeLists.txt  README.md  package.xml
src/1_sense/obstacle_detection/include/: obstacle_detection_node.h
src/1_sense/obstacle_detection/src/: obstacle_detection_node.cpp
src/1_sense/sensor_filter/: CMakeLists.txt  README.md  package.xml
src/1_sense/sensor_filter/config/: default_config.yaml
src/1_sense/sensor_filter/include/: sensor_filter_config.h  sensor_filter_node.h
src/1_sense/sensor_filter/src/: sensor_filter_config.cpp  sensor_filter_node.cpp
src/1_sense/sensor_filter/test/: sensor_filter_test.cpp
src/1_sense/start_box/: CMakeLists.txt  README.md  package.xml
src/1_sense/start_box/include/: start_detector.h  start_detector_config.h  start_detector_node.h
src/1_sense/start_box/src/: start_detector.cpp  start_detector_node.cpp
src/1_sense/start_box/test/: start_detector_test.cpp
src/2_plan/bezier_curve/: CMakeLists.txt  README.md  package.xml
src/2_plan/bezier_curve/config/: default_config.yaml  slow_obstacle_config.yaml
src/2_plan/bezier_curve/include/: bezier_curve_config.h  bezier_curve_node.h
src/2_plan/bezier_curve/src/: bezier_curve_config.cpp  bezier_curve_node.cpp
src/2_plan/global_obstacle_avoidance/: CMakeLists.txt  README.md  package.xml
src/2_plan/global_obstacle_avoidance/config/: slam.yaml
src/2_plan/global_obstacle_avoidance/include/: object_detector.h  path_finder.h  trajectory_planer.h
src/2_plan/global_obstacle_avoidance/src/: object_detector.cpp  path_finder.cpp  slam.cpp  trajectory_planer.cpp
src/2_plan/lane_transform/: CMakeLists.txt  README.md  package.xml
src/2_plan/lane_transform/config/: default_config.yaml
src/2_plan/lane_transform/include/: lane_transform_config.h  lane_transform_node.h
src/2_plan/lane_transform/src/: lane_transform_config.cpp  lane_transform_node.cpp
src/2_plan/mpc/: CMakeLists.txt  acados_mpc.ipynb  acados_mpc.py  bicycle_model.json  bicycle_sim.json  folder_structure.md  package.xml
src/2_plan/mpc/c_generated_code/: CMakeLists.txt  Makefile  acados_sim_solver.pxd  acados_sim_solver_bicycle_model.c  acados_sim_solver_bicycle_model.h  acados_sim_solver_bicycle_sim.c  acados_sim_solver_bicycle_sim.h  acados_solver_bicycle_model.c  acados_solver_bicycle_model.h  main_bicycle_model.c  main_sim_bicycle_model.c  main_sim_bicycle_sim.c
src/2_plan/mpc/include/: mpc.h
src/2_plan/mpc/src/: mpc.cpp
src/2_plan/purepursuite/: CMakeLists.txt  README.md  package.xml
src/2_plan/purepursuite/include/: lateral_control.h  longitudinal_control.h  purepursuit_control_config.h  purepursuit_control_node.h
src/2_plan/purepursuite/src/: lateral_control.cpp  longitudinal_control.cpp  purepursuit_control_node.cpp
src/2_plan/simulated_control/: CMakeLists.txt  README.md  package.xml
src/2_plan/simulated_control/config/: default_config.yaml  fast_obstacle_config.yaml  slow_obstacle_config.yaml
src/2_plan/simulated_control/include/: simulated_control.h  simulated_control_config.h  simulated_control_node.h
src/3_act/uc_com_simple/: CMakeLists.txt  package.xml
src/3_act/uc_com_simple/include/: uc_com_config.h  (+1 more)
(+96 files in other folders)
