<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>psaf_ucbridge</name>
    <version>1.2.5</version>
    <description>Communication to the uc-board.</description>
    <maintainer email="ps-af@es.tu-darmstadt.de">psaf</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>libserial-dev</build_depend>
    <build_depend>psaf_ucbridge_msgs</build_depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
