<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>depth_obstacle_detection</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="josuachristoph.lindemann@stud.tu-darmstadt.de">Josua Christoph Lindemann</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Build dependencies -->
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>opencv</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_filters</build_depend>
    <build_depend>utility</build_depend>
    <build_depend>helpers</build_depend>
    <build_depend>timer</build_depend>
    <build_depend>openmp</build_depend>

    <!-- Execution dependencies -->
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>opencv</exec_depend>
    <exec_depend>pcl_conversions</exec_depend>
    <exec_depend>pcl_ros</exec_depend>
    <exec_depend>pcl_filters</exec_depend>
    <exec_depend>utility</exec_depend>
    <exec_depend>openmp</exec_depend>

    <!-- Test dependencies -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
