<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>lane_detection</name>
    <version>0.0.1</version>
    <description>Lane detection via sliding window approach.</description>
    <maintainer email="josuachristoph.lindemann@stud.tu-darmstadt.de">josua</maintainer>
    <license>MIT</license>

    <!-- Build tools -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Build dependencies -->
    <build_depend>yaml-cpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>opencv</build_depend>
    <build_depend>utility</build_depend>
    <build_depend>helpers</build_depend>
    <build_depend>timer</build_depend>
    <build_depend>openmp</build_depend>

    <!-- Execution dependencies -->
    <exec_depend>yaml-cpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>utility</exec_depend>
    <exec_depend>openmp</exec_depend>

    <!-- Test dependencies -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <!-- Export build type -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
